# ai-bootcamp-codespace

./: .gitignore  README.md  pyproject.toml
data_cache/: download-youtube-videos.ipynb
notes/: session2.md
week1/: Untitled.ipynb  docs.ipynb  env-test.ipynb  hw1.ipynb  rag.ipynb  youtube.ipynb
week1/src/: github.py
week2/: agents-intro.ipynb  agents-sdk-multiagent-system.ipynb  agents-sdk.ipynb  agents-toyaikit.ipynb  hw2-multi-agent.ipynb  hw2-single-agent.ipynb  mcp-client.ipynb  mcp-pydantic-ai.ipynb  pydantic-ai-deep-research.ipynb  pydantic-ai-intro.ipynb  pydantic-ai-multiagent.ipynb  test.py  youtube.py
week2/mcp_faq/: main.py  pyproject.toml
week3/code/: Makefile  main.py  pyproject.toml
week3/code/evals/: eval_agent_judge.py  eval_agent_run.py  eval_orchestrator.py  generate_data.py  sample_ground_truth.py
week3/code/hw/: hw3.ipynb
week3/code/notebooks/: chunking.ipynb  evaluation-agent-run.ipynb  evaluation-judge.ipynb  evidently.ipynb  ground-truth.ipynb  retrieval-evaluation.ipynb
week3/code/tests/: conftest.py  patch_agent.py  test_agent.py  test_agent_judge.py
week3/code/wikiagent/: README.md  main.py  (+6 more)
week4/code/: docker-compose.yml  pyproject.toml  search_agent.py  search_tools.py  ver1.py  ver2.py  ver3.py
week4/code/monitoring/: app.py  config.py  evaluator.py  fake_data.py  feedback.py  parser.py  runner.py  sources.py
week4/code/monitoring/grafana/provisioning/datasources/: datasource.yml
week4/guardrails-agents-sdk/: agents-sdk.ipynb
week4/guardrails-pydantic-ai/: notebook.ipynb  search_agent.py  ver3.py  ver31.py
(+10 files in other folders)
