[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "dotenv>=0.9.9",
    "jaxn>=0.0.1",
    "logfire>=4.13.2",
    "minsearch>=0.0.7",
    "psycopg2-binary>=2.9.11",
    "psycopg2[binary]>=2.9.11",
    "psycopg[binary]>=3.2.12",
    "pydantic-ai>=1.1.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
]
